--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "apexcharts": "^3.27.1",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
