--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
     "strict": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
