--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "path-browserify": "^1.0.1",
     "typescript": "~4.3.2"
   }
 }
